{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 1359,
  "lineage": "8644641f-a7ca-baa4-55a7-fc2b02258df1",
  "resources": [
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "westeu_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/frontendIPConfigurations/westeu-frontend",
                "name": "westeu-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/publicIPAddresses/170483226-dc-weu-lb-pip"
              }
            ],
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb",
            "location": "westeurope",
            "name": "170483226-weu-lb",
            "resource_group_name": "170483226-s24-region2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "westus_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/frontendIPConfigurations/westus-frontend",
                "name": "westus-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/publicIPAddresses/170483226-dc-wus-lb-pip"
              }
            ],
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb",
            "location": "westus",
            "name": "170483226-wus-lb",
            "resource_group_name": "170483226-s24-region1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "westeurope_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool",
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb",
            "name": "westeu-backendpool"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westeu_lb",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "westus_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool",
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb",
            "name": "westus-backendpool"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westus_lb",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "westeu_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/frontendIPConfigurations/westeu-frontend",
                "name": "westeu-frontend"
              }
            ],
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/outboundRules/170483226-westeu-outbound-rule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb",
            "name": "170483226-westeu-outbound-rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westeu_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westeurope_backend",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "westus_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/frontendIPConfigurations/westus-frontend",
                "name": "westus-frontend"
              }
            ],
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/outboundRules/170483226-westus-outbound-rule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb",
            "name": "170483226-westus-outbound-rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westus_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westus_backend",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "westeu_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/probes/170483226-weu-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb",
            "name": "170483226-weu-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westeu_lb",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "westus_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/probes/170483226-wus-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb",
            "name": "170483226-wus-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westus_lb",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "westeu_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/frontendIPConfigurations/westeu-frontend",
            "frontend_ip_configuration_name": "westeu-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/loadBalancingRules/170483226-westeu-rule-tcp",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb",
            "name": "170483226-westeu-rule-tcp",
            "probe_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/probes/170483226-weu-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westeu_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westeurope_backend",
            "module.lbalancers.azurerm_lb_probe.westeu_probe",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "westus_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/frontendIPConfigurations/westus-frontend",
            "frontend_ip_configuration_name": "westus-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/loadBalancingRules/170483226-westus-rule-tcp",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb",
            "name": "170483226-westus-rule-tcp",
            "probe_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/probes/170483226-wus-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westus_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westus_backend",
            "module.lbalancers.azurerm_lb_probe.westus_probe",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "westeurope_nic_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "westeu_nic_vm1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm1/ipConfigurations/170483226-we-ipconfig1|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool",
            "ip_configuration_name": "170483226-we-ipconfig1",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westeu_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westeurope_backend",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip",
            "module.vnets.azurerm_network_interface.westeu_nic_pc2",
            "module.vnets.azurerm_network_interface.westeu_nic_vm1",
            "module.vnets.azurerm_network_interface.westeu_nic_vm2",
            "module.vnets.azurerm_network_interface.westus_nic_pc1",
            "module.vnets.azurerm_network_interface.westus_nic_vm1",
            "module.vnets.azurerm_network_interface.westus_nic_vm2",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        },
        {
          "index_key": "westeu_nic_vm2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm2/ipConfigurations/170483226-we-ipconfig2|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/loadBalancers/170483226-weu-lb/backendAddressPools/westeu-backendpool",
            "ip_configuration_name": "170483226-we-ipconfig2",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm2"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westeu_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westeurope_backend",
            "module.lbalancers.azurerm_public_ip.westeu_lb_pip",
            "module.vnets.azurerm_network_interface.westeu_nic_pc2",
            "module.vnets.azurerm_network_interface.westeu_nic_vm1",
            "module.vnets.azurerm_network_interface.westeu_nic_vm2",
            "module.vnets.azurerm_network_interface.westus_nic_pc1",
            "module.vnets.azurerm_network_interface.westus_nic_vm1",
            "module.vnets.azurerm_network_interface.westus_nic_vm2",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "westus_nic_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "westus_nic_vm1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm1/ipConfigurations/170483226-wu-ipconfig1|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool",
            "ip_configuration_name": "170483226-wu-ipconfig1",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westus_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westus_backend",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip",
            "module.vnets.azurerm_network_interface.westeu_nic_pc2",
            "module.vnets.azurerm_network_interface.westeu_nic_vm1",
            "module.vnets.azurerm_network_interface.westeu_nic_vm2",
            "module.vnets.azurerm_network_interface.westus_nic_pc1",
            "module.vnets.azurerm_network_interface.westus_nic_vm1",
            "module.vnets.azurerm_network_interface.westus_nic_vm2",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        },
        {
          "index_key": "westus_nic_vm2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm2/ipConfigurations/170483226-wu-ipconfig2|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/loadBalancers/170483226-wus-lb/backendAddressPools/westus-backendpool",
            "ip_configuration_name": "170483226-wu-ipconfig2",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm2"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.lbalancers.azurerm_lb.westus_lb",
            "module.lbalancers.azurerm_lb_backend_address_pool.westus_backend",
            "module.lbalancers.azurerm_public_ip.westus_lb_pip",
            "module.vnets.azurerm_network_interface.westeu_nic_pc2",
            "module.vnets.azurerm_network_interface.westeu_nic_vm1",
            "module.vnets.azurerm_network_interface.westeu_nic_vm2",
            "module.vnets.azurerm_network_interface.westus_nic_pc1",
            "module.vnets.azurerm_network_interface.westus_nic_vm1",
            "module.vnets.azurerm_network_interface.westus_nic_vm2",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "westeu_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "dc-westeu-lbalancer",
            "fqdn": "dc-westeu-lbalancer.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/publicIPAddresses/170483226-dc-weu-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.63.121.132",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "170483226-dc-weu-lb-pip",
            "resource_group_name": "170483226-s24-region2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.lbalancers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "westus_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "dc-westus-lbalancer",
            "fqdn": "dc-westus-lbalancer.westus.cloudapp.azure.com",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/publicIPAddresses/170483226-dc-wus-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.86.176.61",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "170483226-dc-wus-lb-pip",
            "resource_group_name": "170483226-s24-region1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "westeu_nic_pc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-pc2",
            "internal_domain_name_suffix": "rzdpc20rcmve1mnuj40zuzikyc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig2",
                "primary": true,
                "private_ip_address": "172.16.100.54",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "170483226-westeu-nic-pc2",
            "private_ip_address": "172.16.100.54",
            "private_ip_addresses": [
              "172.16.100.54"
            ],
            "resource_group_name": "170483226-s24-region2"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "westeu_nic_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm1",
            "internal_domain_name_suffix": "rzdpc20rcmve1mnuj40zuzikyc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "170483226-we-ipconfig1",
                "primary": true,
                "private_ip_address": "172.16.100.52",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-A0-DD-E3",
            "name": "170483226-westeu-nic-vm1",
            "private_ip_address": "172.16.100.52",
            "private_ip_addresses": [
              "172.16.100.52"
            ],
            "resource_group_name": "170483226-s24-region2",
            "virtual_machine_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Compute/virtualMachines/170483226-we1"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "westeu_nic_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm2",
            "internal_domain_name_suffix": "rzdpc20rcmve1mnuj40zuzikyc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "170483226-we-ipconfig2",
                "primary": true,
                "private_ip_address": "172.16.100.53",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-8A-A0-50",
            "name": "170483226-westeu-nic-vm2",
            "private_ip_address": "172.16.100.53",
            "private_ip_addresses": [
              "172.16.100.53"
            ],
            "resource_group_name": "170483226-s24-region2",
            "virtual_machine_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Compute/virtualMachines/170483226-we2"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "westus_nic_pc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-pc1",
            "internal_domain_name_suffix": "mqex0elrsspehlewbe2gv2lkjh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.16.100.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "170483226-westus-nic-pc1",
            "private_ip_address": "172.16.100.5",
            "private_ip_addresses": [
              "172.16.100.5"
            ],
            "resource_group_name": "170483226-s24-region1"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "westus_nic_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm1",
            "internal_domain_name_suffix": "mqex0elrsspehlewbe2gv2lkjh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "170483226-wu-ipconfig1",
                "primary": true,
                "private_ip_address": "172.16.100.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-05-42-67",
            "name": "170483226-westus-nic-vm1",
            "private_ip_address": "172.16.100.6",
            "private_ip_addresses": [
              "172.16.100.6"
            ],
            "resource_group_name": "170483226-s24-region1",
            "virtual_machine_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Compute/virtualMachines/170483226-wu1"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "westus_nic_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm2",
            "internal_domain_name_suffix": "mqex0elrsspehlewbe2gv2lkjh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "170483226-wu-ipconfig2",
                "primary": true,
                "private_ip_address": "172.16.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "00-0D-3A-5B-3C-32",
            "name": "170483226-westus-nic-vm2",
            "private_ip_address": "172.16.100.4",
            "private_ip_addresses": [
              "172.16.100.4"
            ],
            "resource_group_name": "170483226-s24-region1",
            "virtual_machine_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Compute/virtualMachines/170483226-wu2"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "westeu_nic_pc2_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-pc2|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-pc2",
            "network_security_group_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_network_interface.westeu_nic_pc2",
            "module.vnets.azurerm_network_security_group.westeu_nsg",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "westeu_nic_vm1_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm1|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm1",
            "network_security_group_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_network_interface.westeu_nic_vm1",
            "module.vnets.azurerm_network_security_group.westeu_nsg",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "westeu_nic_vm2_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm2|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkInterfaces/170483226-westeu-nic-vm2",
            "network_security_group_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_network_interface.westeu_nic_vm2",
            "module.vnets.azurerm_network_security_group.westeu_nsg",
            "module.vnets.azurerm_subnet.westeu_subnet",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "westus_nic_pc1_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-pc1|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-pc1",
            "network_security_group_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_network_interface.westus_nic_pc1",
            "module.vnets.azurerm_network_security_group.westus_nsg",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "westus_nic_vm1_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm1|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm1",
            "network_security_group_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_network_interface.westus_nic_vm1",
            "module.vnets.azurerm_network_security_group.westus_nsg",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "westus_nic_vm2_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm2|/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg",
            "network_interface_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkInterfaces/170483226-westus-nic-vm2",
            "network_security_group_id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_network_interface.westus_nic_vm2",
            "module.vnets.azurerm_network_security_group.westus_nsg",
            "module.vnets.azurerm_subnet.westus_subnet",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "westeu_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/networkSecurityGroups/170483226-westeu-nsg",
            "location": "westeurope",
            "name": "170483226-westeu-nsg",
            "resource_group_name": "170483226-s24-region2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "westus_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/networkSecurityGroups/170483226-westus-nsg",
            "location": "westus",
            "name": "170483226-westus-nsg",
            "resource_group_name": "170483226-s24-region1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_ip_westeurope",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/publicIPAddresses/westeurope-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.91.221.156",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "westeurope-bastion-pip",
            "resource_group_name": "170483226-s24-region2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_ip_westus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/publicIPAddresses/westus-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.91.33.75",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "westus-bastion-pip",
            "resource_group_name": "170483226-s24-region1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "westeu_ag_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.80/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-ag-subnet",
            "name": "170483226-westeu-ag-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "170483226-s24-region2",
            "virtual_network_name": "170483226-westeurope-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "westeu_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.64/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "170483226-s24-region2",
            "virtual_network_name": "170483226-westeurope-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "westeu_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.48/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-subnet",
            "name": "170483226-westeu-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "170483226-s24-region2",
            "virtual_network_name": "170483226-westeurope-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_virtual_network.westeurope_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "westus_ag_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.32/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-ag-subnet",
            "name": "170483226-westus-ag-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "170483226-s24-region1",
            "virtual_network_name": "170483226-westus-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "westus_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.16/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "170483226-s24-region1",
            "virtual_network_name": "170483226-westus-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "westus_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.0/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-subnet",
            "name": "170483226-westus-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "170483226-s24-region1",
            "virtual_network_name": "170483226-westus-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.regions",
            "module.vnets.azurerm_virtual_network.westus_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "westeurope_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.100.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "73f1468e-1351-4d2a-b1b4-4fb59a650ac2",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet",
            "location": "westeurope",
            "name": "170483226-westeurope-vnet",
            "resource_group_name": "170483226-s24-region2",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.100.48/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-subnet",
                "name": "170483226-westeu-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.100.64/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.100.80/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region2/providers/Microsoft.Network/virtualNetworks/170483226-westeurope-vnet/subnets/170483226-westeu-ag-subnet",
                "name": "170483226-westeu-ag-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "westus_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.100.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "117d0964-9471-439e-ac96-09386af16a4f",
            "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet",
            "location": "westus",
            "name": "170483226-westus-vnet",
            "resource_group_name": "170483226-s24-region1",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.100.0/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-subnet",
                "name": "170483226-westus-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.100.16/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.100.32/28"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5dea7a5a-782a-496e-a5a1-487c16ba6a34/resourceGroups/170483226-s24-region1/providers/Microsoft.Network/virtualNetworks/170483226-westus-vnet/subnets/170483226-westus-ag-subnet",
                "name": "170483226-westus-ag-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.regions"
          ]
        }
      ]
    }
  ]
}